--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
         testImplementation 'io.rest-assured:rest-assured:4.3.0'
         testImplementation 'io.rest-assured:json-schema-validator:4.3.0'
         testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.1'
     }
 
 }
